# bunny_mesh_normals

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cc
data/: bunny_faces.npy  bunny_vertices.npy  face_normals.npy  vertex_normals.npy
include/bunny_mesh/: Mesh.h  data_io.h
python/: visualize_mesh.py
scripts/: build.sh  clean.sh  compile.sh  install_dependencies.sh  run_bunny_mesh_normals.sh  run_tests.sh
src/: CMakeLists.txt  Data_IO.h  Mesh.cc  Mesh.h  example1.cpp  main.cc
test/: CMakeLists.txt  test_IO.cc  test_Mesh.cc
test/data/: sequential_double.npy  sequential_int.npy
